--- a/typing/colorthemes/dark.xaml
+++ b/typing/colorthemes/dark.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:typing">
-    <Brush x:Key="cBackground">#ff05DFDB</Brush>
-    <Brush x:Key="cForeground">#FFF00000</Brush>
+
+    <!--colors-->
+    <Brush x:Key="cBackground">#FF053215</Brush>
+    <Brush x:Key="cFontcolor">#FFff9889</Brush>
+    <Brush x:Key="cButtonBackground">#FF223265</Brush>
+    <Brush x:Key="cButtonFontcolor">#FF000000</Brush>
+    
 </ResourceDictionary>
