--- a/typing/PlayPage.xaml
+++ b/typing/PlayPage.xaml
@@ -32,6 +32,7 @@
                     <RowDefinition Height="35"/>
                     <RowDefinition Height="15"/>
                     <RowDefinition Height="55"/>
+                    <RowDefinition Height="35"/>
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
@@ -40,7 +41,10 @@
                 <TextBlock x:Name="Qarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="4" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Run Text="スペースを押してスタート"/>
                 </TextBlock>
-                <TextBlock x:Name="Aarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="5" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="AnsArea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="5" FontSize="25"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
+
+                </TextBlock>
+                <TextBlock x:Name="Aarea" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="6" FontSize="35"  TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center">
                     
                 </TextBlock>
             </Grid>
