--- a/typing/ResultPage.xaml
+++ b/typing/ResultPage.xaml
@@ -26,32 +26,49 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="80"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="150"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="3*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Text="お疲れ様でした" FontSize="60" TextAlignment="Center" Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="80" Foreground="{DynamicResource cFontcolor}"/>
-            <Grid Grid.Row="3" Margin="50,0,50,0" ShowGridLines="True">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="35"/>
-                    <RowDefinition Height="35"/>
-                    <RowDefinition Height="35"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">合計時間</TextBlock>
-                <TextBlock Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">問題数</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">タイプ数</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">ミスタイプ数</TextBlock>
 
-                <TextBlock x:Name="timev" Grid.Row="0" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
-                <TextBlock x:Name="allcntv" Grid.Row="1" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
-                <TextBlock x:Name="typecntv" Grid.Row="2" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
-                <TextBlock x:Name="miscntv" Grid.Row="3" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
-            </Grid>
+            <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Auto" CanContentScroll="True" Margin="50,0,50,0">
+                <Grid Margin="0,0,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="230"/>
+                        <RowDefinition Height="40"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Margin="50,0,50,0" ShowGridLines="True">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">合計時間(秒)</TextBlock>
+                        <TextBlock Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">速さ(1秒あたり)</TextBlock>
+                        <TextBlock Grid.Row="2" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">正解率(%)</TextBlock>
+                        <TextBlock Grid.Row="3" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">問題数</TextBlock>
+                        <TextBlock Grid.Row="4" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">タイプ数</TextBlock>
+                        <TextBlock Grid.Row="5" Grid.Column="0" FontSize="25" HorizontalAlignment="Center">ミスタイプ数</TextBlock>
+
+                        <TextBlock x:Name="timev" Grid.Row="0" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                        <TextBlock x:Name="speedv" Grid.Row="1" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                        <TextBlock x:Name="raratev" Grid.Row="2" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                        <TextBlock x:Name="allcntv" Grid.Row="3" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                        <TextBlock x:Name="typecntv" Grid.Row="4" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                        <TextBlock x:Name="miscntv" Grid.Row="5" Grid.Column="1" FontSize="25" HorizontalAlignment="Center">0</TextBlock>
+                    </Grid>
+                    <Button Click="copyr_text" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Grid.ColumnSpan="2" Content="結果をコピー (テキスト)"/>
+                </Grid>
+
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Page>
